--- a/app/views/pages/realestate.html.erb
+++ b/app/views/pages/realestate.html.erb
@@ -4,6 +4,7 @@
     <div class="row">
       <div class="col-12 text-right hover-underline pad-top">
         <h1>
+      <%= image_tag "raza-logo.png", class: "avatar-large", id: "re-logo" %>
           <a href="https://www.linkedin.com/in/m-raza-pirbhai/" class="text-white"><i class="fab fa-linkedin"></i></a>
           <a href="https://github.com/lazyrayza" class="text-white no-deco"><i class="fab fa-github"></i></a>
           <a href="mailto:razapirbhai4@gmail.com" class="text-white no-deco"><i class="fa fa-envelope-square"></i></a>
