--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top navbar-lewagon-home">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "logo.png", class: "avatar" %>
+    <%= image_tag "raza-logo.png", class: "avatar-large" %>
   <% end %>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
