--- a/app/assets/stylesheets/components/_flip.scss
+++ b/app/assets/stylesheets/components/_flip.scss
@@ -103,12 +103,16 @@ text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px r
   margin: auto;
   text-align: center;
   padding: 14px 48px;
+  color: white;
+  text-decoration: none;
 &:hover{
   // height: 40%;
   // width: 60%;
   transition: ease 300ms;
   padding: auto;
   background: linear-gradient(45deg, #4286f4, #6ECAD6);
+  color: white;
+  text-decoration: none;
 }
 }
 
