--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,7 @@
 html, body {
   padding:0;
   margin:0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  // font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   // width: 100%;
   // height: 100%;
   overflow-x: hidden;
@@ -36,7 +36,10 @@ html, body {
   text-align: center;
   border-radius: 20px;
   padding-bottom: 40px;
-
+  text-decoration: none !important;
+  &:hover {
+    text-decoration: none !important;
+  }
 }
 
 .split.left .button:hover {
