changes to home button and h1 scss

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -131,7 +131,14 @@ html, body {
 .hover-right .left:before {
   z-index: 2;
 }
-
+@media (min-width: 100px) and (max-width: 575px) {
+  .home-button {
+    transform: scale(0.8);
+  }
+  h1 {
+    font-size: 1.2rem !important;
+  }
+}
 @media(max-width: 800px) {
   h1 {
     font-size: 2rem;
