fixed changes and added favicon

--- a/app/views/pages/programming.html.erb
+++ b/app/views/pages/programming.html.erb
@@ -32,7 +32,7 @@
                 {<br />
                 &nbsp;&nbsp; "<span class="slime">school</span>": "<span class="slime">Le Wagon, London</span>",<br />
                 &nbsp;&nbsp; "<span class="slime">major</span>": "<span class="slime">Full-tack coding bootcamp</span>",<br />
-                &nbsp;&nbsp; "<span class="slime">graduating</span>": "<span class="slime">March 2019</span>"<br />
+                &nbsp;&nbsp; "<span class="slime">graduated</span>": "<span class="slime">March 2019</span>"<br />
                 }<br /><br />
               <span class="night">// hobbies &amp;&amp; interests</span><br />
                 ["<span class="slime">If I’m not fixing bugs or learning about algorithms, you can probably find me...</span>"]<br />
@@ -108,7 +108,7 @@
           </div>
           <div class="back">
              <!-- <h2>Sessions</h2> -->
-             <p>Web application designed for people looking for online therapy session. The user can book & pay online for a therapy session, & communicate through a face-to-face chat session. Deployed on Heroku.</p>
+             <p>Web application designed for people looking for online therapy sessions. The user can book & pay online for a therapy session & communicate through a face-to-face chat session. Deployed on Heroku.</p>
              <!-- <h3><strong>Languages Used</strong></h3> -->
              <i class="fab fa-js fa-2x" title="Javascript"></i>
              <i class="fas fa-gem fa-2x" title="Ruby"></i>
@@ -128,7 +128,7 @@
         </div>
         <div class="back">
            <!-- <h2>Get your price</h2> -->
-           <p>Web app where clients can upload pictures of their car and receive and approximate valuation of their car using image recognition.</p>
+           <p>Web app where clients can upload pictures of their car and receive an approximate valuation of their car using image recognition.</p>
            <!-- <h3><strong>Languages Used</strong></h3> -->
              <i class="fab fa-js fa-2x" title="Javascript"></i>
              <i class="fas fa-gem fa-2x" title="Ruby"></i>
@@ -162,17 +162,17 @@
       <h2 class="text-center">Get in touch</h2>
       <p class="text-center">Contact me on any of the following</p>
       <div class="social">
-        <a href="https://github.com/lazyrayza" target="_blank">
-          <i class="fab fa-github-square" title="GitHub"></i>
-        </a>
-        <a href="https://www.facebook.com/razaJ13" target="_blank">
-          <i class="fab fa-facebook-square" title="Facebook"></i>
-        </a>
         <a href="mailto:razapirbhai4@gmail.com" target="_blank">
           <i class="fas fa-envelope-open-text" title="E-mail"></i>
         </a>
+        <a href="https://github.com/lazyrayza" target="_blank">
+          <i class="fab fa-github-square" title="GitHub"></i>
+        </a>
         <a href="https://www.linkedin.com/in/m-raza-pirbhai/" target="_blank">
           <i class="fab fa-linkedin" title="Linkedin"></i>
+        </a>
+        <a href="https://www.facebook.com/razaJ13" target="_blank">
+          <i class="fab fa-facebook-square" title="Facebook"></i>
         </a>
       </div>
     </div>
