--- a/app/views/pages/programming.html.erb
+++ b/app/views/pages/programming.html.erb
@@ -133,9 +133,9 @@
              <i class="fab fa-js fa-2x" title="Javascript"></i>
              <i class="fas fa-gem fa-2x" title="Ruby"></i>
              <i class="fab fa-python fa-2x" title="Python"></i>
-             <a href="https://www.zpcmotors.mu" id="flip4">
-              <div class="visit-btn"> Visit</div>
-             </a>
+             <!-- <a href="https://www.zpcmotors.mu" id="flip4"> -->
+              <div class="visit-btn"> Soon</div>
+             <!-- </a> -->
         </div>
       </div>
 
